--- a/style/style.css
+++ b/style/style.css
@@ -48,7 +48,7 @@ section {
     backdrop-filter: blur(10px);
     transition: all 0.5s ease;
 }
-
+/* Name as logo */
 .logo {
     font-size: 3rem;
     color: var(--bg-color);
@@ -120,6 +120,46 @@ section {
     }
 }
 
+/* Animation for title */
+
+.wrappers{
+    display: inline-flex;
+}
+.wrappers,
+.static_text{
+    color: var(--text-color);
+    font-size: 60px;
+    font-weight: 400;
+}
+.dynamic-text{
+    color: black;
+    font-size: 60px;
+    font-weight: 500;
+    margin-left: 15px;
+    
+
+}
+.dynamic-text span{
+    position: relative;
+}
+.dynamic-text span::after{
+    content: "";
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    border-left: 2px solid var(--main-color);
+    animation: typing 1.5s steps(10) infinite;
+}
+@keyframes typing {
+    100%{
+        left: 100%;
+        margin: 0 -35 0 35;
+    }
+    
+}
+
 .home-content {
     margin-left: 5rem;
 }
@@ -129,19 +169,12 @@ section {
     font-weight: 700;
 }
 
-span {
-    color: var(--main-color);
-}
-
-.home-content > h1 {
-    font-size: 6rem;
-    font-weight: 700;
-}
-
 .home-content p {
     font-size: 1.6rem;
 }
 
+
+/* Social icon */
 #social_media a {
     display: inline-flex;
     justify-content: center;
@@ -212,15 +245,14 @@ span {
     
 }
 
-
-
 .row1 {
     display: flex;
     margin-top: 20px;
 }
-
+/* Personal information  */
 .personal_info
- {flex: 0 0 30%;
+ {
+    flex: 0 0 30%;
     max-width: 30%;
     padding-top: 40px;
     box-shadow: 0 0 10px var(--main-color);
@@ -249,6 +281,8 @@ padding: 15px;
     display: inline-block;
 
 }
+
+/* Skill */
 .skills {
     flex: 0 0 30%;
     max-width: 30%;
@@ -330,7 +364,7 @@ padding: 15px;
     width: 70%;
 }
 
-
+/* Qualification section */
 .qualification {
     background-color: var(--snd-bg-color);
     flex: 0 0 30%;
@@ -408,15 +442,10 @@ padding: 15px;
    
 }
 
-.title h1{
-    align-items: center;
-    justify-content: center;
 
-}
 .project-show {
     align-items: center;
     justify-content: center;
-
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
     gap: 2rem;
@@ -447,9 +476,100 @@ padding: 15px;
 }
 
 .project-item p {
-    margin: 1.5rem 0;
+    margin: 1 rem 0;
     font-size: 1.6rem;
     font-weight: 600;
     color: var(--text-color);
     padding: 0 1.5rem;
 }
+
+/* contact form */
+.contact{
+    display: flex;
+    justify-content: center;
+   
+    background-color: #d5fdf9;
+}
+.container {
+    height: 50rem;
+    width: 80rem;
+    display: flex;
+    gap: 20px;
+    background-color: var(--snd-bg-color);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    justify-content: center;
+  }
+  
+  .contact-info {
+    flex: 1;
+    background-color: var(--bg-color);
+    padding: 20px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    height: 30rem;
+  }
+  
+  .contact-info h2 {
+    margin-bottom: 20px;
+  }
+  
+  .contact-info p {
+    margin: 10px 0;
+  }
+  
+  .contact-form {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  }
+  
+  .contact-form input,
+  .contact-form textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid var(--bg-color);
+    border-radius: 5px;
+    background-color: var(--bg-color);
+    color: #000;
+    font-size: 16px;
+  }
+  
+  .contact-form button {
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    background-color: var(--main-color);
+    color: #fff;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+  
+  .contact-form button:hover {
+    background-color:var(--snd-bg-color);
+    color: #007f73;
+  }
+ 
+  .email:focus{
+    outline: 1px solid var(--main-color);
+
+  }
+  .subject:focus{
+    outline: 1px solid var(--main-color);
+    
+  }
+  .message:focus{
+    outline: 1px solid var(--main-color);
+    
+
+  }
+  .name:focus{
+    outline: 1px solid var(--main-color);
+  }
