--- a/style/style.css
+++ b/style/style.css
@@ -259,6 +259,9 @@ section {
     border-radius: 10px;
    
 }
+.personal_info:hover{
+    box-shadow: 0 8px 30px rgba(0, 0, 0, 0.3);
+}
 .personal_info h3{
     font-size: 2.7rem;
     text-align: center;
@@ -291,6 +294,10 @@ padding: 15px;
     border-radius: 10px;
     margin-left: 50px;
     
+}
+.skills:hover{
+    box-shadow: 0 8px 30px rgba(0, 0, 0, 0.3);
+
 }
 
 .row {
