--- a/style/style.css
+++ b/style/style.css
@@ -259,6 +259,11 @@ section {
     border-radius: 10px;
    
 }
+.personal_info:hover{
+    
+        box-shadow: 0 8px 30px rgba(0, 0, 0, 0.3);
+    
+}
 
 .personal_info h3{
     font-size: 2.7rem;
@@ -291,6 +296,12 @@ padding: 15px;
     box-shadow: 0 0 20px var(--main-color);
     border-radius: 10px;
     margin-left: 50px;
+    
+}
+
+.skills:hover{
+    
+        box-shadow: 0 8px 30px rgba(0, 0, 0, 0.3);
     
 }
 
@@ -378,6 +389,9 @@ padding: 15px;
     text-align: center;
     transition: box-shadow 0.3s ease;
     box-shadow: 0 0 20px var(--main-color);
+}
+.qualification:hover {
+    box-shadow: 0 8px 30px rgba(0, 0, 0, 0.3);
 }
 
 
